--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,10 +9,10 @@ phases:
     commands:
       - echo Starting build at `date`
       - echo Building the docker image...
-      - docker build -t $IAMGE_REPO_NAME:$IMAGE_TAG .
-      - docker tag $IAMGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IAMGE_REPO_NAME:$IMAGE_TAG
+      - docker build -t $IAMGE_REPO_NAME:$CODEBUILD_BUILD_NUMBER .
+      - docker tag $IAMGE_REPO_NAME:$CODEBUILD_BUILD_NUMBER $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IAMGE_REPO_NAME:$CODEBUILD_BUILD_NUMBER
   post_build:
     commands:
       - echo Completed build at `date`
       - echo Pushing the docker image...
-      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IAMGE_REPO_NAME:$IMAGE_TAG
+      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IAMGE_REPO_NAME:$CODEBUILD_BUILD_NUMBER
